--- a/index.html
+++ b/index.html
@@ -18,8 +18,38 @@
     <section class="lead">
       <h1 class="lead__title">Путешествия по России</h1>
       <h2 class="lead__subtitle">Настоящая страна не в выпусках новостей, а здесь.</h2>
-      <img class="lead__image" src="./images/lead__polka.png" alt="Полка плацкарт">
-      <p class="lead__caption">ваша полка — верхняя</p>
+      <figure class="lead__figure">
+        <img class="lead__image" src="./images/lead__image.png" alt="Полка плацкарт">
+        <figcaption class="lead__caption">ваша полка — верхняя</figcaption>
+      </figure>
+    </section>
+    <section class="intro">
+      <h2 class="intro__title">Чего мы там не видели?</h2>
+      <p class="intro__text">По опросам ВЦИОМ, 95% россиян мечтают куда-нибудь поехать, но только 36% планируют провести отпуск в родной стране. Мол, чего мы тут, дома, не видели? На самом деле, Россия — это целая вселенная с ласковым морем юга, густыми лесами Саян и суровыми льдами плато Путорана. А ещё увидеть все эти красоты можно без миллионов на счету, загранпаспорта и многочасовых перелетов. Как, например, Вера Башмакова — смелая молодая мама, которая взяла в охапку троих детей, усадила их в свою «Ладу» и проехала 20 тысяч километров по родной стране. Мы выбрали и описали некоторые интересные места, достойные вашего отпуска.</p>
+      <ul class="intro__list">
+        <li>Часовых поясов 11</li>
+        <li>Объектов природного наследия ЮНЕСКО 12</li>
+        <li>Объектов культурного наследия ЮНЕСКО 16</li>
+        <li>Природных заповедников 105</li>
+        <li>Аэропортов 241</li>
+      </ul>
+    </section>
+    <section class="photo-grid">
+      <img class="photo-grid__item" src="./images/grid__train (1).jpg" alt="фото">
+      <img class="photo-grid__item" src="./images/grid__atharva (1).png" alt="фото">
+      <img class="photo-grid__item" src="./images/grid__tuman (1).png" alt="фото">
+      <img class="photo-grid__item" src="./images/grid__sochi (1).png" alt="фото">
+      <img class="photo-grid__item" src="./images/grid__arisa (1).png" alt="фото">
+      <img class="photo-grid__item" src="./images/grid__baikal (1).jpg" alt="фото">
+      <img class="photo-grid__item" src="./images/grid__elbrus (1).png" alt="фото">
+      <img class="photo-grid__item" src="./images/grid__kondratiev (1).png" alt="фото">
+      <img class="photo-grid__item" src="./images/grid__kamchatka (1).png" alt="фото">
+      <img class="photo-grid__item" src="./images/grid__kamchatka2 (1).png" alt="фото">
+      <img class="photo-grid__item" src="./images/grid__baikal2 (1).png" alt="фото">
+      <img class="photo-grid__item" src="./images/grid__ergaki (1).png" alt="фото">
+    </section>
+    <section class="places">
+        
     </section>
   </main>
 </body>
