--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
   </header>
   <main class="content">
     <section class="lead">
-      <h1 class="lead__title">Путешествия по России</h1>
+      <h1 class="lead__title">Путешествия по&nbsp;России</h1>
       <h2 class="lead__subtitle">Настоящая страна не в выпусках новостей, а здесь.</h2>
       <figure class="lead__figure">
         <img class="lead__image" src="./images/lead__image.png" alt="Полка плацкарт">
-        <figcaption class="lead__caption">ваша полка — верхняя</figcaption>
+        <figcaption class="lead__caption">ваша полка&#8209;верхняя</figcaption>
       </figure>
     </section>
     <section class="intro">
