change img name

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Путешествия по России</title>
-  <link rel="stylesheet" href="./index.css"> <!-- Подключить стили-->
+  <link rel="stylesheet" href="./index.css">
 </head>
 <body class="page">
   <header class="header">
@@ -35,18 +35,18 @@
       </ul>
     </section>
     <section class="photo-grid">
-      <img class="photo-grid__item" src="./images/grid__train (1).jpg" alt="фото">
-      <img class="photo-grid__item" src="./images/grid__atharva (1).png" alt="фото">
-      <img class="photo-grid__item" src="./images/grid__tuman (1).png" alt="фото">
-      <img class="photo-grid__item" src="./images/grid__sochi (1).png" alt="фото">
-      <img class="photo-grid__item" src="./images/grid__arisa (1).png" alt="фото">
-      <img class="photo-grid__item" src="./images/grid__baikal (1).jpg" alt="фото">
-      <img class="photo-grid__item" src="./images/grid__elbrus (1).png" alt="фото">
-      <img class="photo-grid__item" src="./images/grid__kondratiev (1).png" alt="фото">
-      <img class="photo-grid__item" src="./images/grid__kamchatka (1).png" alt="фото">
-      <img class="photo-grid__item" src="./images/grid__kamchatka2 (1).png" alt="фото">
-      <img class="photo-grid__item" src="./images/grid__baikal2 (1).png" alt="фото">
-      <img class="photo-grid__item" src="./images/grid__ergaki (1).png" alt="фото">
+      <img class="photo-grid__item" src="./images/grid__train.jpg" alt="фото">
+      <img class="photo-grid__item" src="./images/grid__atharva.png" alt="фото">
+      <img class="photo-grid__item" src="./images/grid__tuman.png" alt="фото">
+      <img class="photo-grid__item" src="./images/grid__sochi.png" alt="фото">
+      <img class="photo-grid__item" src="./images/grid__arisa.png" alt="фото">
+      <img class="photo-grid__item" src="./images/grid__baikal.jpg" alt="фото">
+      <img class="photo-grid__item" src="./images/grid__elbrus.png" alt="фото">
+      <img class="photo-grid__item" src="./images/grid__kondratiev.png" alt="фото">
+      <img class="photo-grid__item" src="./images/grid__kamchatka.png" alt="фото">
+      <img class="photo-grid__item" src="./images/grid__kamchatka2.png" alt="фото">
+      <img class="photo-grid__item" src="./images/grid__baikal2.png" alt="фото">
+      <img class="photo-grid__item" src="./images/grid__ergaki.png" alt="фото">
     </section>
     <section class="places">
       <article class="place">
@@ -55,7 +55,7 @@
           <p class="place__website_url-heading">URL</p>
           <a class='place__website_link' href="http://park-kosa.ru">park-kosa.ru</a>
         </div>
-        <img class="place__image" src="./images/place__kosa (1).png" alt="Фото Куршская коса">
+        <img class="place__image" src="./images/place__kosa.png" alt="Фото Куршская коса">
         <div class="place__paragraphs">
           <p class="place__paragraph">Здесь, посреди лесов и песчаных дюн, вы сможете увидеть два водных горизонта — спокойного Куршского залива с одной стороны и подёрнутого рябью волн Балтийского моря с другой. Уникальная природная зона на краю российского анклава.</p>
           <p class="place__paragraph">На этом Калининградская область не заканчивается. Для путешественника и исследователя там же по соседству — самая западная точка России, Балтийская коса, — и немецкое наследие россыпи небольших приморских городов. Атмосфера здешних мест исключает суету, окуная в спокойствие природы и запах стального, прохладного моря.</p>
@@ -67,7 +67,7 @@
           <p class="place__website_url-heading">URL</p>
           <a class='place__website_link' href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy">National Geographic</a>
         </div>
-        <img class="place__image" src="./images/place__kolskiy (1).png" alt="Фото Кольский">
+        <img class="place__image" src="./images/place__kolskiy.png" alt="Фото Кольский">
         <div class="place__paragraphs">
           <p class="place__paragraph">Почти весь полуостров находится за Полярным кругом. Саамская тундра, от которой на юг — 
           тайга, а на север — Ледовитый океан, прикидывающийся Баренцевым морем.</p>
@@ -81,7 +81,7 @@
           <p class="place__website_url-heading">URL</p>
           <a class='place__website_link' href="https://www.facebook.com/vera.bashmakova/posts/10156011613718822">Facebook</a>
         </div>
-        <img class="place__image" src="./images/place__altay (1).png" alt="Фото Алтай">
+        <img class="place__image" src="./images/place__altay.png" alt="Фото Алтай">
         <div class="place__paragraphs">
           <p class="place__paragraph">Алтай — одно из красивейших мест в России. 
           В первую очередь из-за гор: если ехать вдоль хребта, вы увидите склоны, усыпанные соснами, горные реки и озёра. А если вы откроете в автомобиле окна, сможете познакомиться с невидимым чудом здешних мест — горным воздухом.</p>
@@ -94,7 +94,7 @@
           <p class="place__website_url-heading">URL</p>
           <a class='place__website_link' href="https://vk.com/baikalmile">https://vk.com/baikalmile</a>
         </div>
-        <img class="place__image" src="./images/place__baikal (1).png" alt="Фото Зимний Байкал">
+        <img class="place__image" src="./images/place__baikal.png" alt="Фото Зимний Байкал">
        <div class="place__paragraphs">
           <p class="place__paragraph">Всем известен Байкал как крупнейшее озеро 
           в мире. Многие также знают, что это самый большой источник пресной воды и одно из красивейших мест в России.</p>
@@ -108,7 +108,7 @@
           <p class="place__website_url-heading">URL</p>
           <a class='place__website_link' href="http://vodlozero.ru">http://vodlozero.ru</a>
         </div>
-        <img class="place__image" src="./images/place__karelia (1).png" alt="Фото Карелия">
+        <img class="place__image" src="./images/place__karelia.png" alt="Фото Карелия">
         <div class="place__paragraphs">
           <p class="place__paragraph">Сибирь заканчивается не на Урале, а в Карелии: образующая тайгу сибирская лиственница не растёт западнее Водлозера. Зато здесь она вымахивает на 30 метров — леса карельских национальных парков из-за непроходимых болот никогда не знали топора. Некоторым соснам уже больше чем полтысячелетия. Прикоснитесь к живому существу, видевшему солнце раньше, чем увидал его Иван Грозный. 
           В девственном лесу на сотню километров не встретишь тропы. А на редких тропинках деревья 
