--- a/index.html
+++ b/index.html
@@ -4,20 +4,20 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Путешествия по России</title>
-  <link rel="stylesheet" href="./index.css">
+  <link rel="stylesheet" href="./pages/index.css">
 </head>
 <body class="page">
   <header class="header">
     <img class="header__logo" src="./images/__logo.svg" alt="Знак Россия">
-    <ul class="header__lang-link">
-      <li><a href="#" class="header__lang-link header__lang-link_lang_ru" lang="en">Ru</a></li>
-      <li><a href="#" class="header__lang-link header__lang-link_lang_en" lang="en">En</a></li>
+    <ul class="header__lang-list">
+      <li><a href="#" class="header__lang-link header__lang-link_underline" lang="en">Ru</a></li>
+      <li><a href="#" class="header__lang-link" lang="en">En</a></li>
     </ul>          
   </header>
   <main class="content">
     <section class="lead">
       <h1 class="lead__title">Путешествия по&nbsp;России</h1>
-      <h2 class="lead__subtitle">Настоящая страна не в выпусках новостей, а здесь.</h2>
+      <p class="lead__subtitle">Настоящая страна не в выпусках новостей, а здесь.</p>
       <figure class="lead__figure">
         <img class="lead__image" src="./images/lead__image.png" alt="Полка плацкарт">
         <figcaption class="lead__caption">ваша полка&#8209;верхняя</figcaption>
@@ -52,8 +52,8 @@
       <article class="place">
         <h2 class="place__title">Куршская коса</h2>
         <div class="place__website">
-          <p class="place__website place__website_url-heading">URL</p>
-          <a class='place__website place__website_link' href="http://park-kosa.ru">park-kosa.ru</a>
+          <p class="place__url-heading">url</p>
+          <a class="place__link" href="http://park-kosa.ru">park-kosa.ru</a>
         </div>
         <img class="place__image" src="./images/place__kosa.png" alt="Фото Куршская коса">
         <div class="place__paragraphs">
@@ -64,8 +64,8 @@
       <article class="place">
         <h2 class="place__title">Кольский</h2>
         <div class="place__website">
-          <p class="place__website place__website_url-heading">URL</p>
-          <a class='place__website place__website_link' href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy">National Geographic</a>
+          <p class="place__url-heading">url</p>
+          <a class='place__link' href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy">National Geographic</a>
         </div>
         <img class="place__image" src="./images/place__kolskiy.png" alt="Фото Кольский">
         <div class="place__paragraphs">
@@ -78,8 +78,8 @@
       <article class="place">
         <h2 class="place__title">Алтай</h2>
         <div class="place__website">
-          <p class="place__website place__website_url-heading">URL</p>
-          <a class="place__website place__website_link" href="https://www.facebook.com/vera.bashmakova/posts/10156011613718822">Facebook</a>
+          <p class="place__url-heading">url</p>
+          <a class="place__link" href="https://www.facebook.com/vera.bashmakova/posts/10156011613718822">Facebook</a>
         </div>
         <img class="place__image" src="./images/place__altay.png" alt="Фото Алтай">
         <div class="place__paragraphs">
@@ -91,8 +91,8 @@
       <article class="place">
         <h2 class="place__title">Зимний Байкал</h2>
         <div class="place__website">
-          <p class="place__website place__website_url-heading">URL</p>
-          <a class='place__website place__website_link' href="https://vk.com/baikalmile">https://vk.com/baikalmile</a>
+          <p class="place__url-heading">url</p>
+          <a class='place__link' href="https://vk.com/baikalmile">https://vk.com/baikalmile</a>
         </div>
         <img class="place__image" src="./images/place__baikal.png" alt="Фото Зимний Байкал">
        <div class="place__paragraphs">
@@ -105,8 +105,8 @@
       <article class="place">
         <h2 class="place__title">Карелия</h2>
         <div class="place__website">
-          <p class="place__website place__website_url-heading">URL</p>
-          <a class='place__website place__website_link' href="http://vodlozero.ru">http://vodlozero.ru</a>
+          <p class="place__url-heading">url</p>
+          <a class='place__link' href="http://vodlozero.ru">http://vodlozero.ru</a>
         </div>
         <img class="place__image" src="./images/place__karelia.png" alt="Фото Карелия">
         <div class="place__paragraphs">
@@ -119,7 +119,7 @@
     <section class="cover">
       <a class="cover__photo" href="https://stampsy.com/na-elektrichkakh-do-baikala">
         <h2 class="cover__title">До Байкала «на&nbsp;собаках»</h2>
-        <h3 class="cover__subtitle">По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала на электричках.</h3>
+        <p class="cover__subtitle">По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала на электричках.</p>
       </a>
     </section>
   </main>
