--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@
         </div>
         <img class="place__image" src="./images/place__kosa.png" alt="Фото Куршская коса">
         <div class="place__paragraphs">
-          <p class="place__paragraph">Здесь, посреди лесов и песчаных дюн, вы сможете увидеть два водных горизонта — спокойного Куршского залива с одной стороны и подёрнутого рябью волн Балтийского моря с другой. Уникальная природная зона на краю российского анклава.</p>
-          <p class="place__paragraph">На этом Калининградская область не заканчивается. Для путешественника и исследователя там же по соседству — самая западная точка России, Балтийская коса, — и немецкое наследие россыпи небольших приморских городов. Атмосфера здешних мест исключает суету, окуная в спокойствие природы и запах стального, прохладного моря.</p>
+          <p class="place__paragraph">Здесь, посреди лесов и песчаных дюн, вы сможете увидеть два водных горизонта — спокойного Куршского залива с одной стороны и&nbsp;подёрнутого рябью волн Балтийского моря с&nbsp;другой. Уникальная природная зона на краю российского анклава.</p>
+          <p class="place__paragraph">На этом Калининградская область не заканчивается. Для путешественника и&nbsp;исследователя там же по соседству — самая западная точка России, Балтийская коса, — и&nbsp;немецкое наследие россыпи небольших приморских городов. Атмосфера здешних мест исключает суету, окуная в спокойствие природы и&nbsp;запах стального, прохладного моря.</p>
         </div>
       </article>
       <article class="place">
