--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         </div>
         <img class="place__image" src="./images/place__kolskiy.png" alt="Фото Кольский">
         <div class="place__paragraphs">
-          <p class="place__paragraph">Почти весь полуостров находится за Полярным кругом. Саамская тундра, от которой на юг — тайга, а на&nbsp;север — Ледовитый океан, прикидывающийся Баренцевым морем.</p>
+          <p class="place__paragraph">Почти весь полуостров находится за Полярным кругом. Саамская тундра, от которой на юг — тайга, а&nbsp;на&nbsp;север — Ледовитый океан, прикидывающийся Баренцевым морем.</p>
           <p class="place__paragraph">Возможно, вы смотрели Звягинцева и даже слышали историю арктического фестиваля в Териберке. Возможно, слово «Хибины» не осталось под снегом школьных воспоминаний об уроках географии. Возможно, вы не интересовались пронизывающей земную кору сверхглубокой скважиной, а от апатитов вас давно накрывает апатия. Но ваша мечта увидеть северное сияние начинает сбываться с билетом
           в Мурманск.</p>
         </div>
@@ -97,8 +97,7 @@
        <div class="place__paragraphs">
           <p class="place__paragraph">Всем известен Байкал как крупнейшее озеро 
           в мире. Многие также знают, что это самый большой источник пресной воды и одно из красивейших мест в России.</p>
-          <p class="place__paragraph">Конечно, это всё так. Но Байкал ещё идеальное место для соревнований по скийорингу. Это такой вид спорта, когда лыжник привязывает себя 
-          к мотоциклу, и тандем старается развить как можно бóльшую скорость на льду. В марте 2019 года на фестивале «Байкальская миля» был поставлен мировой рекорд — 197.011 км/ч.</p>
+          <p class="place__paragraph">Конечно, это всё так. Но Байкал ещё идеальное место&nbsp;для соревнований по скийорингу. Это такой вид спорта, когда лыжник привязывает себя к мотоциклу, и&nbsp;тандем&nbsp;старается развить как можно бóльшую скорость на льду. В марте 2019 года на фестивале «Байкальская миля» был поставлен мировой рекорд — 197.011 км/ч.</p>
         </div>
         </article>
       <article class="place">
@@ -125,11 +124,11 @@
   <footer class="footer">
     <nav class="footer__nav">
       <ul class="footer__links">
-        <li><a class="footer__link" href="https://yandex.ru/maps">Карты</a></li>
-        <li><a class="footer__link" href="https://yandex.ru/pogoda">Погода</a></li>
-        <li><a class="footer__link" href="https://rasp.yandex.ru">Расписание</a></li>
-        <li><a class="footer__link" href="https://calendar.yandex.ru">Календарь</a></li>
-        <li><a class="footer__link" href="https://travel.yandex.ru">Путешествия</a></li>
+        <li class="footer__item"><a class="footer__link" href="https://yandex.ru/maps">Карты</a></li>
+        <li class="footer__item"><a class="footer__link" href="https://yandex.ru/pogoda">Погода</a></li>
+        <li class="footer__item"><a class="footer__link" href="https://rasp.yandex.ru">Расписание</a></li>
+        <li class="footer__item"><a class="footer__link" href="https://calendar.yandex.ru">Календарь</a></li>
+        <li class="footer__item"><a class="footer__link" href="https://travel.yandex.ru">Путешествия</a></li>
       </ul>
     </nav>
     <p class="footer__copyright">© 2021. Лилия Труфанова</p>
