--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     </section>
     <section class="places">
       <article class="place">
-        <h2 class="place__title">Куршская коса</h2>
+        <h2 class="place__title">Куршская&emsp;коса</h2>
         <div class="place__website">
           <p class="place__url-heading">url</p>
           <a class="place__link" href="http://park-kosa.ru">park-kosa.ru</a>
@@ -97,7 +97,7 @@
        <div class="place__paragraphs">
           <p class="place__paragraph">Всем известен Байкал как крупнейшее озеро 
           в мире. Многие также знают, что это самый большой источник пресной воды и одно из красивейших мест в России.</p>
-          <p class="place__paragraph">Конечно, это всё так. Но Байкал ещё идеальное место&nbsp;для соревнований по скийорингу. Это такой вид спорта, когда лыжник привязывает себя к мотоциклу, и&nbsp;тандем&nbsp;старается развить как можно бóльшую скорость на льду. В марте 2019 года на фестивале «Байкальская миля» был поставлен мировой рекорд — 197.011 км/ч.</p>
+          <p class="place__paragraph">Конечно, это всё так. Но Байкал ещё идеальное место&nbsp;для соревнований по скийорингу. Это такой вид спорта, когда лыжник привязывает себя к мотоциклу, и тандем старается развить как можно бóльшую скорость на льду. В марте 2019 года на фестивале «Байкальская миля» был поставлен мировой рекорд — 197.011 км/ч.</p>
         </div>
         </article>
       <article class="place">
